@@ -5,6 +5,9 @@
    Add new filetype setting "comment_single" to provide separated
    single-line and multiline comment support. Single-line are used in
    priority to comment code, and multiline to make template comments.
+ * src/editor.c, src/search.c, tagmanager/diff.c:
+   Don't use strlen(..) > 0 or == 0, simply check the first character
+   against 0.
 
 
 2011-03-19  Colomban Wendling  <colomban(at)geany(dot)org>
